modifies jupyter notebook for the first experiment

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ ontology/*
 catalog*xml
 ontology/benchmark/*
 .coverage
-notebooks/.ipynb_checkpoints
+**/.ipynb_checkpoints
 notebooks/images
 notebooks/converted
